fixed white space

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
   /* Scrolling watercolor background */
   background-image: url('images/lighthouse.png');
   background-attachment: scroll;
-  background-size: cover;
+  background-size: 100% calc(100% + 30px);
   background-position: center -30px;
   background-repeat: no-repeat;
 }
@@ -360,7 +360,7 @@ a {
    ============================================================ */
 
 .story {
-  padding: var(--pad-v) var(--pad-h);
+  padding: var(--pad-v) var(--pad-h) 0;
   margin-top: clamp(80px, 14vw, 280px);
   display: flex;
   justify-content: center;
